--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
- <!doctype html>
-    <html>
-      <head>
-        <title>Static HTML Site</title>
-      </head>
-      <body>
-        <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>JavaScript</script>.</p>
-      </body>
-    </html>
+<!DOCTYPE html>
+ <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Title of the document</title>
+  </head>
 
+  <body>
+     Content of the document......
+  </body>
+
+</html>
